--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/Monbedon/liri-node-app/issues"
   },
-  "homepage": "https://github.com/Monbedon/liri-node-app#readme"
+  "homepage": "https://github.com/Monbedon/liri-node-app#readme",
+  "dependencies": {
+    "twitter": "^1.7.1"
+  }
 }
